# Urban_Lastenrad_AirPollution

./: .gitignore  Preprocessing_Particle_sensor.ipynb  RouteWithDistance_new_20m.gpkg  Route_Sensors.gpkg  downloader.ipynb  komoot_route_projected_new.gpkg  location_on_path.ipynb  map_measurement_to_building.ipynb  mean_PM.gpkg  median_PM.gpkg  pyproject.toml
.ipynb_checkpoints/: Preprocessing_Particle_sensor-checkpoint.ipynb  location_on_path-checkpoint.ipynb
data/MedianStandardized_withNA/: Aufnahme_11062024_Abend_combined_MedianStandardized_withNA.gpkg  Aufnahme_11062024_VM_combined_MedianStandardized_withNA.gpkg  Aufnahme_12062024_Daemmerung_combined_MedianStandardized_withNA.gpkg  Aufnahme_12062024_Mittag_combined_MedianStandardized_withNA.gpkg  Aufnahme_13062024_Morgen_combined_MedianStandardized_withNA.gpkg  Aufnahme_13062024_nachmittag_combined_MedianStandardized_withNA.gpkg  Aufnahme_17062024_Abend_combined_MedianStandardized_withNA.gpkg  Aufnahme_18062024_Mittag_combined_MedianStandardized_withNA.gpkg  Aufnahme_19062024_Nachmittag_combined_MedianStandardized_withNA.gpkg  Aufnahme_20062024_Vormittag_combined_MedianStandardized_withNA.gpkg
data/combined/: Aufnahme_11062024_Abend_combined.gpkg  Aufnahme_11062024_VM_combined.gpkg  Aufnahme_12062024_Daemmerung_combined.gpkg  Aufnahme_12062024_Mittag_combined.gpkg  Aufnahme_13062024_Morgen_combined.gpkg  Aufnahme_13062024_nachmittag_combined.gpkg  desktop.ini  (+4 more)
doc/: data_info.md
gpkgs/: RouteWithDistance_new.gpkg  RouteWithDistance_new_50m.gpkg  komoot_route_projected_new_2.gpkg
src/: main.py  osm_download.py
(+180 files in other folders)
