[project]
name = "finalmeasurements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "gpxpy>=1.6.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
